--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -119,6 +119,15 @@
     }
 
     .biodata input[type="file"] {
+        /* display: none; */
+    }
+
+    .maintenance {
         display: none;
+        transition: 0.5s all;
+    }
+
+    .maintenance-parent:hover .maintenance {
+        display: block;
     }
 }
